--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-heatmap-grid": "^0.9.1",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.15.3",
     "zustand": "^4.5.1"
